Refactoring task submission.
Change-Id: Icdf90beddbe5d35b60f0c623f4fcefcbb2c1a50b